src/objects/QPMS__SOSL_Search_Result__c.object
<CustomObject>
    <description>It will store the search result data from batch apex</description>
    <fields>
        <fullName>QPMS__GDPR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GDPR</label>
        <referenceTo>QPMS__GDPR__c</referenceTo>
        <relationshipLabel>Search Results</relationshipLabel>
        <relationshipName>Search_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Number_of_records_found__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of records found</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Object_Api_Name__c</fullName>
        <label>Object Api Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Object_Description__c</fullName>
        <label>Object Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Object_Field_Api_Names__c</fullName>
        <label>Object Field Api Names</label>
        <length>130000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Search_value__c</fullName>
        <label>Search value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Search Result</label>
    <nameField>
        <label>Search Result Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Search Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>